tests/fixtures/invalid/pow_set_float_none.py
# Cannot call pow() with Set[int], Float, None
x = pow({1, 2, 3}, 1.0, None)
